# openexr

./: .clang-format  .readthedocs.yml  CHANGES.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  MODULE.bazel  README.md  SECURITY.md  pyproject.toml  pytest.ini  scratch.sh  sonar-project.properties  test.sh
.github/workflows/: analysis_workflow.yml  bazel_build.yml  ci_arm32.yml  ci_examples.yml  ci_freebsd.yml  ci_linux_i686.yml  ci_steps.yml  ci_workflow.yml  ci_workflow_msys2.yml  ci_workflow_old.yml  codeql.yml  msys2.yml  python-wheels-publish-test.yml  python-wheels-publish.yml  python-wheels.yml  release-notice-test.yml  release-sign.yml  scorecard.yml  scratch.yml  test-action.yml  website_preview.yml  website_workflow.yml
OpenEXR/IlmImf/: ImfDeepScanLineInputFile.cpp  ImfDeepScanLineOutputFile.cpp
bazel/: openjph_module_dot_bazel.patch
cmake/: CMakeLists.txt  LibraryDefine.cmake  OpenEXR.pc.in  OpenEXRConfig.h.in  OpenEXRSetup.cmake
docs/: CMakeLists.txt  InterpretingDeepPixels.rst  MultiViewOpenEXR.rst  OpenEXRFileLayout.rst  ReadingAndWritingImageFiles.rst  StandardOptionalAttributes.rst  TechnicalIntroduction.rst  about.rst  conf.py  index.rst  install.rst  license.rst  news.rst  requirements.txt
docs/scripts/: test_images.py
share/ci/: install_manifest.txt
share/ci/install_manifest/: install_manifest-1.txt  install_manifest-3.txt  install_manifest-4.txt  install_manifest-5.txt  install_manifest-6.txt  install_manifest-8.txt  install_manifest.linux.5.txt  install_manifest.macos.5.txt  install_manifest.macos.8.txt  install_manifest.ubuntu.5.txt  install_manifest.windows.10.txt  install_manifest.windows.12.txt  install_manifest.windows.5.txt  install_manifest.windows.7.txt  install_manifest.windows.8.txt  install_manifest.windows.9.txt
share/ci/scripts/: clone_external_repo.sh  install_help2man.sh  install_imath.sh  install_libdeflate.sh  install_openjph.sh  install_pybind11.sh  validate_install.py
share/ci/scripts/linux/: install_help2man.sh  validate_openexr_libs.sh
share/ci/scripts/linux/yum/: install_docs_env.sh
share/util/: release.py
src/examples/: CMakeLists.txt  deepExamples.cpp  drawImage.h  generalInterfaceExamples.cpp  generalInterfaceTiledExamples.cpp  lowLevelIoExamples.cpp  multipartExamples.cpp  namespaceAlias.h  previewImageExamples.cpp  rgbaInterfaceExamples.cpp  rgbaInterfaceTiledExamples.cpp
src/lib/: CMakeLists.txt
src/lib/Iex/: CMakeLists.txt  IexMathFloatExc.cpp  IexMathFloatExc.h  IexMathFpu.cpp  IexMathFpu.h
src/lib/IlmThread/: CMakeLists.txt  IlmThreadPool.cpp
src/lib/OpenEXR/: CMakeLists.txt  ImfChannelList.h  ImfDeepFrameBuffer.h  ImfExport.h  ImfFloatAttribute.cpp  ImfFoo.h  ImfFrameBuffer.h  ImfHeader.h  ImfIDManifest.h  ImfIntAttribute.cpp  ImfMisc.cpp  ImfScanLineInputFile.cpp  ImfSystemSpecific.cpp
src/lib/OpenEXRCore/: CMakeLists.txt  chunk.c  debug.c  internal_dwa_compressor.h  internal_ht.cpp  internal_thread.h  parse_header.c  unpack.c
src/lib/OpenEXRUtil/: ImfCheckFile.cpp  ImfSampleCountChannel.cpp  ImfSampleCountChannel.h
src/test/: CMakeLists.txt
src/test/IexTest/: main.cpp  mathFuncs.cpp  testMathExc.cpp
src/test/OpenEXRCoreTest/: compression.cpp  compressionTables.cpp  write.cpp
src/test/OpenEXRExamplesTest/: CMakeLists.txt
src/test/OpenEXRTest/: TestUtilFStream.h  main.cpp  testAttributes.cpp  testMagic.cpp
src/test/OpenEXRUtilTest/: testDeepImage.cpp
src/wrappers/python/: CMakeLists.txt  Imath.py  OpenEXR.cpp  OpenEXR.h  OpenEXR.py  OpenEXR_new.cpp  OpenEXR_old.cpp  PyAttributes.h  PyChannel.cpp  PyChannel.h  PyChromaticities.h  PyFile.cpp  PyFile.h  PyOpenEXR.cpp  PyOpenEXR.h  PyPart.cpp  PyPart.h  README.md  deepExample.cpp  openexr_skbuild_plugin.py  setup.py
src/wrappers/python/cmake/: macos_xcode_clang.cmake
src/wrappers/python/tests/: test.exr  test_deep.py  test_exceptions.py  test_exceptions.sh  test_images.py  test_minimal.py  test_old.py  test_pybind.py  test_pybind.sh  test_rgba.py  test_unittest.py
tests/: test_readme.py
website/: CMakeLists.txt  HelloWorld.rst  Python.rst  TestImages.rst  conf.py  index.rst  install.rst  news.rst  python.rst  requirements.txt  toc_redirect.rst
website/_templates/: layout.html
website/scripts/: test_images.py
website/src/: C_IStream_read.cpp  IStream.cpp  MemoryMappedIStream_read.cpp  multithreading.cpp  previewImageExamples.cpp  readChannelsAndLayers.cpp  readHeader.cpp  tileDescription.cpp  validExrFile.cpp  writeDeepTiledFile.cpp  writeGZ1.cpp  writeRgba1.cpp  writeRgbaWithPreview1.cpp  writeTiled1.cpp  writeTiledRgbaMIP1.cpp  writeTiledRgbaONE1.cpp  writeTiledRgbaONE2.cpp
website/src/exrreader/: exrreader.cpp
website/src/exrwriter/: exrwriter.cpp
website/test_images/: index.rst
