# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) Contributors to the OpenEXR Project.

[build-system]
requires = ["scikit-build-core>=0.3.3"]
build-backend = "scikit_build_core.build"

[project]
name = "OpenEXR"
version = "0.1.2"
description="Python bindings for the OpenEXR image file format"
readme = "README.md"
authors = [
  { name="Contributors to the OpenEXR project", email="info@openexr.com" },
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://openexr.com"
"Source" = "https://github.com/AcademySoftwareFoundation/OpenEXR"
"Bug Tracker" = "https://github.com/AcademySoftwareFoundation/OpenEXR/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
build-dir = "src/wrappers/python"
wheel.expand-macos-universal-tags = true
wheel.packages = ["src/wrappers/python"]

[tool.scikit-build.cmake.define]
CMAKE_PREFIX_PATH = "../../_install"
OPENEXR_BUILD_PYTHON = 'ON'
OPENEXR_INSTALL_EXAMPLES = 'OFF'
OPENEXR_BUILD_TOOLS = 'OFF'
OPENEXR_FORCE_INTERNAL_DEFLATE = 'ON'
OPENEXR_FORCE_INTERNAL_IMATH = 'ON'
BUILD_SHARED_LIBS = 'OFF'
CMAKE_POSITION_INDEPENDENT_CODE = 'ON'

[tool.cibuildwheel]
#test-command = "pytest {project}/src/wrappers/python/tests"
test-command = "ctest -R PyOpenEXR"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1


